<resources>
    <string name="app_name">Elk River</string>
    <string name="sign_out">Sign Out</string>
    <string name="createCustomer">Create Customer Account</string>
    <string name="startupText">Retrieving data from database</string>
    <string name="customerRegistration">Customer registration</string>
    <string name="createCustomerText">Fill any missing information</string>
    <string name="firstNameHint">First Name</string>
    <string name="surnameHint">Surname</string>
    <string name="phoneHintOptional">Phone number (optional)</string>
    <string name="mailHint">Email address</string>
    <string name="sendButtonText">Send</string>
    <string name="employeeRegistration">Employee registration</string>
    <string name="employeeNameHint">Name and Surname</string>
    <string name="address1Text">Street Address</string>
    <string name="address2Text">Address Line 2</string>
    <string name="continueButton">Continue</string>
    <string name="cityHint">City</string>
    <string name="zipText">ZIP code</string>
    <string name="phoneHint">Phone Number</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="tagsTextView">Select at least one of the following tags</string>
    <string name="noTagWarning">Select at least one tag</string>
    <string name="tagsAndHours">Tags and open hours</string>
    <string name="mondayText">Monday</string>
    <string name="fromText">From</string>
    <string name="toText">To</string>
    <string name="hoursText">Touch buttons to set opening hours, leave same time to set closed.</string>
    <string name="tuesdayText">Tuesday</string>
    <string name="wednesdayText">Wednesday</string>
    <string name="thursdayText">Thursday</string>
    <string name="fridayText">Friday</string>
    <string name="saturdayText">Saturday</string>
    <string name="sundayText">Sunday</string>
    <string name="morningText">Morning</string>
    <string name="afternoonText">Afternoon</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="reservations">Reservations</string>
    <string name="search">Search</string>
    <string name="loading">Loading</string>
    <string name="registrations">Registration</string>
    <string name="selectDate">Select Date</string>
    <string name="pressBackToExit">Press again to exit</string>
    <string name="sorry">Sorry!</string>
    <string name="noFreeSlots">No free slots are available for this day</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="closedLowercase" translatable="false">closed</string>
    <string name="availableHours">available hours</string>
    <string name="timeDB" translatable="false">time</string>
    <string name="userLowercase" translatable="false">user</string>
    <string name="noReservations">No reservations found</string>
    <string name="noEmployeeFound">No Employee found</string>
    <string name="mon">MON</string>
    <string name="sun">SUN</string>
    <string name="sat">SAT</string>
    <string name="fri">FRI</string>
    <string name="thu">THU</string>
    <string name="wed">WED</string>
    <string name="tue">TUE</string>
    <string name="welcome_registration_text">Welcome!\nPlease select what kind of profile you wish to create</string>
    <string name="wrongAddress">Can\'t find location, please check address</string>
    <string name="searchDistance">Search distance:</string>
    <string name="reservationCompleted">Reservation completed</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="onWithTabs">\t on \t</string>
    <string name="deleteReservationFor">Delete reservation for \n</string>
    <string name="edit">Edit</string>
    <string name="edit_opening_hours">Edit opening hours</string>
    <string name="edit_your_tags">Edit your tags</string>
    <string name="finish">finish</string>
    <string name="changeFieldsEditEmployee">Change the fields you wish to modify</string>
    <string name="reservationEmployeeDetails">Employee Details</string>
    <string name="addressSearch">Address Search</string>
    <string name="addressSearchInput">Insert the address from where you want to search</string>
    <string name="refresh">Refresh</string>
    <string name="chat">Chat</string>
    <string name="write_a_message">Write a message…</string>
    <string name="conversations">Conversations</string>
    <string name="current_user_uid_key">current_user_uid_key</string>
    <string name="current_user_username_key">current_user_username_key</string>
    <string name="elk_river_preferences">Elk_River_Preferences</string>
    <string name="last_location_string_key">last_location_string_key</string>
    <string name="last_latitude_key">last_latitude_key</string>
    <string name="last_longitude_key">last_longitude_key</string>
    <string name="leave_a_review">Leave a review!</string>
    <string name="reviews">Reviews</string>
    <string name="need_update_key">need_update_key</string>
    <string name="isCustomer_key">isCustomer_key</string>
    <string name="history">History</string>
    <string name="past_reservations">Past Reservations</string>
    <string name="create_employee_account">Create Employee Account</string>
    <string name="rental_equipment_available">Rental equipment available</string>
    <string name="expert_fisherman_instructor">Expert fisherman/Instructor</string>
    <string name="no_fishing_spots">No suggested fishing spots found</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="fishing_instructor">Fishing Instructor</string>
    <string name="fishing_spot">Fishing Spot</string>
    <string name="CONST_EXPERT_INSTRUCTOR">expert_instructor</string>
    <string name="CONST_RENTAL">rental</string>
    <string name="CONST_SPOT">spot</string>
    <string name="write_a_review_optional">Write a review! (optional)</string>
    <string name="star_review">%s: %d star review</string>
    <string name="rental_equipment">Rental Equipment</string>
    <string name="maps_api_key">AIzaSyCub6Mcwa1zSQ7LYZGG9m6_IgeI_bXv880</string>
    <string name="fishing_spot_name">Fishing Spot Name</string>
    <string name="check_on_map">Check on map</string>
    <string name="name_already_used">Name already used, loading it on map…</string>
    <string name="enter_name_fishing_spot">Please enter a name for the fishing spot</string>
    <string name="enter_valid_lat">Please enter a valid latitude</string>
    <string name="enter_valid_lng">Please enter a valid longitude</string>
    <string name="fishing_spot_added">Fishing spot added</string>
    <string name="wrong_coordinates">Error, coordinates are not legitimate</string>
    <string name="current_employee_is_expert_key">current_employee_is_expert_key</string>
    <string name="add_fishing_spot">Add Fishing Spot</string>
    <string name="new_chat_message_from">New chat message from: </string>
    <string name="new_reservation_from">New reservation from: </string>
    <string name="upload_error">Something went wrong uploading the image</string>
    <string name="image_uploaded">Image uploaded</string>
    <string name="wait_for_image_upload">Wait for image upload to finish</string>
    <string name="cant_be_empty">Can\'t be empty</string>
    <string name="enter_valid_mail_address">Enter a valid mail address</string>
    <string name="current_user_pic_key">current_user_pic_key</string>
</resources>
